2006-02-13	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added randreg tool.
	* Modified memdump and memload to accept addresses and lengths.
	* Added more OSD knowledge to tl880doc.txt.

2006-02-09	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Modified randram and striperam to accept address and length
	  parameters.
	* Added readmem and writemem tools to allow reading and writing TL880
	  memory.
	* Added memload tool to load a TL880 memory dump.
	* Added more OSD knowledge to tl880doc.txt.

2006-01-26	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Changed tl880init.c and tl880i2c.c to apply MyHD MDP-110
	  initialization methods to all MyHD cards until more is known about
	  the higher end cards (i.e. MDP-120 and MDP-130).

2006-01-25	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Rearranged a few initialization tasks in tl880kern.c.
	* Started trying to fix interrupts.

2006-01-21	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added OSD register randomization tool.
	* Added memory dump tool.
	* Added support for mapping any offset to tl880_mmap, to allow
	  programs like xorg's mmapr and mmapw to access the card.
	* Figured out some of the OSD stuff and wrote OSD test tools.
	* Added a top-level makefile.

2006-01-19	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Added a set cursor position ioctl.
	* Removed some more debug printk's.

2006-01-17	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Cleaned some code.
	* Removed some old/temporary functions.
	* Fixed potential infinite loop in find_tl880* functions in tl880util.
	* Changed some function names from *_tl880 to tl880_*.
	* Changed tuner set type code to only set PHILIPS_ATSC for MyHD cards.
	* Removed many unnecessary printk's.

2005-12-10	Mike Bourgeous		<i_am_nitrogen at hotmail.com>

	* Removed obsolete tlaudio/ and tltuner/ directories in driver/.
	* Changed TUNER_SET_TYPE to TUNER_SET_TYPE_ADDR for new tuner API.

2005-11-18	Mike Bourgeous		<i_am_nitrogen at hotmail.com>